<resources>
    <string name="app_name">SSEC</string>
    <string name="title_activity_inicio">activityInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SSEC</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Página Principal</string>
    <string name="menu_consultas">Consultas</string>
    <string name="menu_tratamientos">Tratamientos</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_perfil">Perfil del Usuario</string>

    <string name="home_second">Home Second</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="dni">DNI</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="nombre">nombre</string>
    <string name="apellidos">apellidos</string>
    <string name="telefono">telefono</string>
    <string name="poblacion">poblacion</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="notas">Notas</string>
    <string name="informes_de_migranas">Informes de Migrañas</string>
    <string name="informes_de_asma">Informes de Asma</string>
    <string name="informes_de_diabetes">Informes de Diabetes</string>
    <string name="perfil_del_usuario">Perfil del Usuario</string>
    <string name="motivo">Motivo</string>
    <string name="selecciones_una_fecha">Seleccione una fecha</string>
    <string name="cancelar">Cancelar</string>
    <string name="volver">Volver</string>
    <string name="register">Registro</string>
    <string name="anadir_consulta">Añadir Consulta</string>
    <string name="menu_informes_asma">Informes de Asma</string>
    <string name="menu_informes_diabetes">Informes de Diabetes</string>
    <string name="menu_informe_migranas">Informes de Migrañas</string>
</resources>
