<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ssec.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_consultas"
        android:name="com.example.ssec.ui.Consultas.ConsultasFragment"
        android:label="@string/menu_consultas"
        tools:layout="@layout/fragment_consultas" />

    <fragment
        android:id="@+id/nav_notas"
        android:name="com.example.ssec.ui.Nota.NotaFragment"
        android:label="@string/menu_notas"
        tools:layout="@layout/fragment_notas" />


    <fragment
        android:id="@+id/nav_perfiles"
        android:name="com.example.ssec.ui.Perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil"/>

    <fragment
        android:id="@+id/nav_tratamientos"
        android:name="com.example.ssec.ui.Tratamiento.TratamientoFragment"
        android:label="@string/menu_tratamientos"
        tools:layout="@layout/fragment_tratamiento" />

    <fragment
        android:id="@+id/nav_informeAsma"
        android:name="com.example.ssec.ui.InformeAsma.InformeAsmaFragment"
        android:label="@string/menu_informes_asma"
        tools:layout="@layout/fragment_informe_asma" />
    <fragment
        android:id="@+id/nav_informeDiabetes"
        android:name="com.example.ssec.ui.InformeDiabetes.InformeDiabetesFragment"
        android:label="@string/menu_informes_diabetes"
        tools:layout="@layout/fragment_informe_diabetes" />
    <fragment
        android:id="@+id/nav_informeMigranas"
        android:name="com.example.ssec.ui.InformeMigranas.InformeMigranasFragment"
        android:label="@string/menu_informe_migranas"
        tools:layout="@layout/fragment_informe_migranas" />
</navigation>