<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_consultas"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_consultas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <group android:id="@+id/logout" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_exit_app"
            android:title="@string/logout" />
    </group>
</menu>
