<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Perfil.EditUser">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dimBackgroundColor"
        android:elevation="2dp"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:elevation="10dp"
            android:background="@drawable/rounded_corners"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center">

        <TextView
            android:id="@+id/indicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Dejar vacío el campo password para no modificar"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/editText_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_below="@+id/indicaciones"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_dni"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_nombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_apellidos"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText_poblacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_telefono"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="@string/poblacion"
            android:inputType="text" />


        <Spinner
            android:id="@+id/spinner_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_poblacion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:ems="10"
            android:hint="Género"
            android:entries="@array/genero" />

        <EditText
            android:id="@+id/editText_nacimiento"
            android:hint="@string/fecha_de_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_below="@+id/spinner_genero"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:ems="10"
            android:maxLines="1" />

        <Button
            android:id="@+id/button_editar"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_nacimiento"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="27dp"
            android:text="Editar" />

    </RelativeLayout>

</RelativeLayout>