<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.Consultas.AddConsulta">

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dimBackgroundColor"
        android:elevation="2dp"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:elevation="10dp"
            android:indeterminate="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".6">

        <EditText
            android:id="@+id/editText_motivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="20dp"
            android:lines="3"
            android:gravity="bottom"
            android:hint="@string/motivo"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/editText_fechaConsulta"
            android:hint="@string/selecciones_una_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_below="@+id/editText_motivo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".4">


        <ListView
            android:id="@+id/listaHoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8">

        <Button
            android:id="@+id/anadirConsultaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/anadir_consulta" />

        <Button
            android:id="@+id/cancelarConsultaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:text="@string/volver"/>

    </RelativeLayout>

</LinearLayout>


